--- a/features/popover.yml
+++ b/features/popover.yml
@@ -17,6 +17,7 @@ compat_features:
   - api.HTMLElement.popover
   - api.HTMLElement.showPopover
   - api.HTMLElement.togglePopover
+  - api.HTMLElement.togglePopover.returns_boolean
   - api.HTMLElement.toggle_event.popover_elements
   - api.HTMLInputElement.popoverTargetAction
   - api.HTMLInputElement.popoverTargetElement
