Add missing font key

--- a/features/font-loading.yml
+++ b/features/font-loading.yml
@@ -44,3 +44,4 @@ compat_features:
   - api.FontFaceSetLoadEvent.FontFaceSetLoadEvent
   - api.FontFaceSetLoadEvent.worker_support
   - api.FontFaceSetLoadEvent.fontfaces
+  - api.WorkerGlobalScope.fonts
