--- a/features/font-loading.yml.dist
+++ b/features/font-loading.yml.dist
@@ -94,6 +94,18 @@ compat_features:
   - api.FontFace.display
 
   # baseline: low
+  # baseline_low_date: 2022-09-20
+  # support:
+  #   chrome: "69"
+  #   chrome_android: "69"
+  #   edge: "79"
+  #   firefox: "105"
+  #   firefox_android: "105"
+  #   safari: "15"
+  #   safari_ios: "15"
+  - api.WorkerGlobalScope.fonts
+
+  # baseline: low
   # baseline_low_date: 2023-12-07
   # support:
   #   chrome: "120"
