Add secure context and iframe to gamepad

--- a/features/gamepad-haptics.yml
+++ b/features/gamepad-haptics.yml
@@ -16,3 +16,4 @@ compat_features:
   - api.GamepadHapticActuator.playEffect.params_rightTrigger_parameter
   - api.GamepadHapticActuator.playEffect.type_trigger-rumble
   - api.GamepadHapticActuator.reset
+  - api.GamepadHapticActuator.secure_context_required
