--- a/features/gamepad-vr.yml
+++ b/features/gamepad-vr.yml
@@ -14,3 +14,4 @@ compat_features:
   - api.GamepadPose.linearVelocity
   - api.GamepadPose.orientation
   - api.GamepadPose.position
+  - api.GamepadPose.secure_context_required
