--- a/features/gamepad-vr.yml.dist
+++ b/features/gamepad-vr.yml.dist
@@ -4,9 +4,13 @@
 status:
   baseline: false
   support:
-    firefox: "55"
-    firefox_android: "55"
+    firefox: "91"
+    firefox_android: "91"
 compat_features:
+  # baseline: false
+  # support:
+  #   firefox: "55"
+  #   firefox_android: "55"
   - api.Gamepad.hand
   - api.Gamepad.pose
   - api.GamepadPose
@@ -18,3 +22,10 @@ compat_features:
   - api.GamepadPose.linearVelocity
   - api.GamepadPose.orientation
   - api.GamepadPose.position
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   firefox: "91"
+  #   firefox_android: "91"
+  - api.GamepadPose.secure_context_required
