--- a/features/gamepad-haptics.yml.dist
+++ b/features/gamepad-haptics.yml.dist
@@ -54,3 +54,9 @@ compat_features:
   #   firefox_android: "55"
   - api.Gamepad.hapticActuators
   - api.GamepadHapticActuator.pulse
+
+  # baseline: false
+  # support:
+  #   firefox: "91"
+  #   firefox_android: "91"
+  - api.GamepadHapticActuator.secure_context_required
