--- a/features/gamepad.yml
+++ b/features/gamepad.yml
@@ -13,13 +13,18 @@ compat_features:
   - api.Gamepad.id
   - api.Gamepad.index
   - api.Gamepad.mapping
+  - api.Gamepad.secure_context_required
   - api.Gamepad.timestamp
   - api.GamepadButton
   - api.GamepadButton.pressed
+  - api.GamepadButton.secure_context_required
   - api.GamepadButton.value
   - api.Navigator.getGamepads
+  - api.Navigator.getGamepads.secure_context_required
   - api.GamepadEvent
   - api.GamepadEvent.GamepadEvent
   - api.GamepadEvent.gamepad
+  - api.GamepadEvent.secure_context_required
   - api.Window.gamepadconnected_event
   - api.Window.gamepaddisconnected_event
+  - html.elements.iframe.allow.gamepad
