--- a/features/accelerometer.yml.dist
+++ b/features/accelerometer.yml.dist
@@ -17,6 +17,13 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "79"
+  - html.elements.iframe.allow.accelerometer
+
+  # baseline: false
+  # support:
   #   chrome: "67"
   #   chrome_android: "67"
   #   edge: "79"
