--- a/features/magnetometer.yml.dist
+++ b/features/magnetometer.yml.dist
@@ -5,6 +5,23 @@ status:
   baseline: false
   support: {}
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "79"
+  - html.elements.iframe.allow.magnetometer
+
+  # baseline: false
+  # support:
+  #   chrome: "88"
+  #   chrome_android: "88"
+  #   edge: "88"
+  - http.headers.Permissions-Policy.magnetometer
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
   - api.Magnetometer
   - api.Magnetometer.Magnetometer
   - api.Magnetometer.x
