--- a/features/gamepad-vr.yml
+++ b/features/gamepad-vr.yml
@@ -2,6 +2,10 @@ name: Gamepad VR hands and poses
 description: The `hand` and `pose` properties of a `Gamepad` object represent the position in space and the hand that WebVR controllers are held in.
 spec: https://w3c.github.io/gamepad/extensions.html
 group: gamepad
+status:
+  compute_from:
+    - api.Gamepad.hand
+    - api.Gamepad.pose
 compat_features:
   - api.Gamepad.hand
   - api.Gamepad.pose
@@ -14,3 +18,4 @@ compat_features:
   - api.GamepadPose.linearVelocity
   - api.GamepadPose.orientation
   - api.GamepadPose.position
+  - api.GamepadPose.secure_context_required
