--- a/features/permissions.yml
+++ b/features/permissions.yml
@@ -1,5 +1,16 @@
 name: Permissions
 description: The `navigator.permissions` API checks whether a permission, such as access to geolocation data, has been granted.
-spec: https://w3c.github.io/permissions/
+spec:
+  - https://w3c.github.io/permissions/
+  - https://wicg.github.io/permissions-request/#dom-permissions-request
 caniuse: permissions-api
 group: security
+status:
+  compute_from: api.PermissionStatus.state
+compat_features:
+  - api.Navigator.permissions
+  - api.PermissionStatus
+  - api.PermissionStatus.state
+  - api.Permissions
+  - api.Permissions.query
+  - api.Permissions.request
