--- a/features/device-memory.yml
+++ b/features/device-memory.yml
@@ -1,5 +1,5 @@
 name: Device memory
-description: The `Navigator.deviceMemory` API exposes the approximate amount of device memory available, in gigabytes.
+description: The `navigator.deviceMemory` property returns the approximate amount of device memory, in gigabytes.
 spec: https://www.w3.org/TR/device-memory/
 compat_features:
   - api.Navigator.deviceMemory
