Add features and keys from CSSOM View Module spec (#2363)
Co-authored-by: James Stuckey Weber <jamesnw@gmail.com>
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/document-caretpositionfrompoint.yml.dist
+++ b/features/document-caretpositionfrompoint.yml.dist
@@ -7,7 +7,27 @@ status:
     chrome: "128"
     chrome_android: "128"
     edge: "128"
-    firefox: "20"
-    firefox_android: "20"
+    firefox: "23"
+    firefox_android: "23"
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "128"
+  #   chrome_android: "128"
+  #   edge: "128"
+  #   firefox: "20"
+  #   firefox_android: "20"
+  - api.CaretPosition
+  - api.CaretPosition.offset
+  - api.CaretPosition.offsetNode
   - api.Document.caretPositionFromPoint
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "128"
+  #   chrome_android: "128"
+  #   edge: "128"
+  #   firefox: "23"
+  #   firefox_android: "23"
+  - api.CaretPosition.getClientRect
