--- a/features/visual-viewport.yml
+++ b/features/visual-viewport.yml
@@ -1,8 +1,8 @@
 name: Visual viewport API
 description: The `visualViewport` API provides a way to query and modify the user-visible viewport of a web page.
 spec: https://drafts.csswg.org/cssom-view-1/#visualViewport
-# The resize and scroll events are excluded as the onresize and onscroll
-# properties were missing in Chrome 61, but were added in Chrome 62.
+status:
+  compute_from: api.Window.visualViewport
 compat_features:
   - api.VisualViewport
   - api.VisualViewport.height
@@ -10,8 +10,9 @@ compat_features:
   - api.VisualViewport.offsetTop
   - api.VisualViewport.pageLeft
   - api.VisualViewport.pageTop
-  # - api.VisualViewport.resize_event
+  - api.VisualViewport.resize_event
   - api.VisualViewport.scale
-  # - api.VisualViewport.scroll_event
+  - api.VisualViewport.scroll_event
+  - api.VisualViewport.scrollend_event
   - api.VisualViewport.width
   - api.Window.visualViewport
