--- a/features/visual-viewport.yml.dist
+++ b/features/visual-viewport.yml.dist
@@ -14,6 +14,18 @@ status:
     safari: "13"
     safari_ios: "13"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2021-08-10
+  # baseline_high_date: 2024-02-10
+  # support:
+  #   chrome: "61"
+  #   chrome_android: "61"
+  #   edge: "79"
+  #   firefox: "91"
+  #   firefox_android: "68"
+  #   safari: "13"
+  #   safari_ios: "13"
   - api.VisualViewport
   - api.VisualViewport.height
   - api.VisualViewport.offsetLeft
@@ -23,3 +35,24 @@ compat_features:
   - api.VisualViewport.scale
   - api.VisualViewport.width
   - api.Window.visualViewport
+
+  # baseline: high
+  # baseline_low_date: 2021-08-10
+  # baseline_high_date: 2024-02-10
+  # support:
+  #   chrome: "62"
+  #   chrome_android: "62"
+  #   edge: "79"
+  #   firefox: "91"
+  #   firefox_android: "68"
+  #   safari: "13"
+  #   safari_ios: "13"
+  - api.VisualViewport.resize_event
+  - api.VisualViewport.scroll_event
+
+  # baseline: false
+  # support:
+  #   chrome: "126"
+  #   chrome_android: "126"
+  #   edge: "126"
+  - api.VisualViewport.scrollend_event
