--- a/features/private-network-access.yml.dist
+++ b/features/private-network-access.yml.dist
@@ -8,4 +8,5 @@ status:
     chrome_android: "124"
     edge: "124"
 compat_features:
+  - api.Request.targetAddressSpace
   - http.mixed-content.private_network_access
