--- a/features/private-network-access.yml
+++ b/features/private-network-access.yml
@@ -1,5 +1,5 @@
 name: Private Network Access
-description: The Private Network Access feature is a set of modifications to Fetch and HTML which are intended to mitigate the risks associated with unintentional exposure of devices and servers on a client’s internal network to the web at large.
+description: The `Access-Control-Request-Private-Network: true` and `Access-Control-Allow-Private-Network: true` HTTP request and response headers establish permission for websites to make requests to internal networks, such as to routers.
 spec: https://wicg.github.io/private-network-access/
 compat_features:
   - http.mixed-content.private_network_access
