--- a/features/fetch.yml.dist
+++ b/features/fetch.yml.dist
@@ -139,6 +139,7 @@ compat_features:
   #   firefox_android: "44"
   #   safari: "10.1"
   #   safari_ios: "10.3"
+  - api.Headers.@@iterator
   - api.Headers.entries
   - api.Headers.keys
   - api.Headers.values
@@ -360,6 +361,7 @@ compat_features:
   #   firefox_android: "133"
   #   safari: "13"
   #   safari_ios: "13"
+  - api.Request.Request.init_keepalive_parameter
   - api.Request.keepalive
   - api.fetch.init_keepalive_parameter
 
@@ -451,3 +453,9 @@ compat_features:
   #   chrome_android: "105"
   #   edge: "105"
   - api.Request.Request.request_body_readablestream
+
+  # baseline: false
+  # support:
+  #   chrome: "131"
+  #   edge: "131"
+  - api.Request.duplex
