--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:extended": "tsx scripts/build.ts extended-json",
     "build": "tsx scripts/build.ts package",
     "dist": "tsx scripts/dist.ts",
+    "undist": "tsx scripts/undist.ts",
     "feature-init": "tsx scripts/feature-init.ts",
     "format": "npx prettier --write .",
     "schema:write": "npm run schema -- --out ./schemas/data.schema.json",
