--- a/features/file.yml
+++ b/features/file.yml
@@ -1,5 +1,5 @@
 name: File API
-description: The `File` API provides information about files and allows JavaScript in a web page to create new files, and access existing files and their contents.
+description: The File API represents and reads from file data and metadata. Typically, you get files through other APIs, such as the `<input type="file">` element or drag-and-drop events. You may also send file data to other APIs, such as creating images or drawing on canvases.
 spec: https://w3c.github.io/FileAPI/
 caniuse: fileapi
 # Compute status to match Caniuse while also pointing at the main entry point.
