--- a/features/style-attributes.yml
+++ b/features/style-attributes.yml
@@ -1,5 +1,5 @@
 name: Style attributes
 description: The `style` global HTML attribute applies inline CSS styling declarations to individual elements.
-spec: https://drafts.csswg.org/css-style-attr-1/
+spec: https://html.spec.whatwg.org/multipage/dom.html#the-style-attribute
 compat_features:
   - html.global_attributes.style
