Add caniuse matches

--- a/features/console.yml
+++ b/features/console.yml
@@ -2,6 +2,7 @@ name: Console
 description: The `console` API logs debugging messages to the browser development tools' console.
 spec: https://console.spec.whatwg.org/#console-namespace
 group: html-elements
+caniuse: console-basic
 status:
   compute_from: api.console
 compat_features:
