--- a/features/ambient-light.yml
+++ b/features/ambient-light.yml
@@ -1,6 +1,7 @@
 name: Ambient light sensor
 description: The `AmbientLightSensor` interface returns the current light level in lux of the ambient light level around the device.
 spec: https://w3c.github.io/ambient-light/
+caniuse: ambient-light
 group: sensors
 compat_features:
   - api.AmbientLightSensor
