--- a/features/array-includes.yml
+++ b/features/array-includes.yml
@@ -3,6 +3,7 @@ description: The `includes()` method of arrays and typed arrays returns whether 
 spec:
   - https://tc39.es/ecma262/multipage/indexed-collections.html#sec-array.prototype.includes
   - https://tc39.es/ecma262/multipage/indexed-collections.html#sec-%25typedarray%25.prototype.includes
+caniuse: array-includes
 snapshot: ecmascript-2016
 group:
   - arrays
