--- a/features/ch.yml
+++ b/features/ch.yml
@@ -2,5 +2,6 @@ name: ch unit
 description: The `ch` CSS length unit is a font-relative length based on the width of the zero (0) character.
 spec: https://drafts.csswg.org/css-values-4/#font-relative-lengths
 group: units
+caniuse: ch-unit
 compat_features:
   - css.types.length.ch
