--- a/features/named-color.yml
+++ b/features/named-color.yml
@@ -2,6 +2,7 @@ name: Named colors
 description: Some CSS color values can be referenced by name, such as `red` or `limegreen`. They stand in for specific RGB color values.
 spec: https://drafts.csswg.org/css-color-4/#named-colors
 group: color-types
+caniuse: css-rebeccapurple
 status:
   compute_from: css.types.color.named-color
 compat_features:
