--- a/features/opacity.yml
+++ b/features/opacity.yml
@@ -2,6 +2,7 @@ name: opacity
 description: The `opacity` CSS property sets the transparency of an element.
 spec: https://drafts.csswg.org/css-color-3/#transparency
 group: css
+caniuse: css-opacity
 status:
   compute_from: css.properties.opacity
 compat_features:
