--- a/features/safe-area-inset.yml
+++ b/features/safe-area-inset.yml
@@ -2,6 +2,8 @@ name: Safe area inset environment variables
 description: The `safe-area-inset-` CSS environment variables represent a rectangle that cannot cut off content within a non-rectangular screen. For example, `top:\ env(safe-area-inset-top);` positions the top of an element below the notch on an iPhone.
 spec: https://drafts.csswg.org/css-env-1/#safe-area-insets
 group: environment-variables
+# Caniuse is for env(), but this currently is the only supported value.
+caniuse: css-env-function
 compat_features:
   - css.properties.custom-property.env.safe-area-inset-bottom
   - css.properties.custom-property.env.safe-area-inset-left
