--- a/features/selectors.yml
+++ b/features/selectors.yml
@@ -2,6 +2,7 @@ name: Selectors (core)
 description: CSS selectors match elements based on their type, attributes, and relationship to other elements. They define the specific elements to which a block of styles will be applied. This feature represents the oldest selectors of CSS.
 spec: https://drafts.csswg.org/selectors-4/
 group: selectors
+caniuse: css-sel2
 compat_features:
   - css.selectors.child
   - css.selectors.class
