--- a/features/text-justify.yml
+++ b/features/text-justify.yml
@@ -2,6 +2,7 @@ name: text-justify
 description: "The `text-justify` CSS property sets the justification method of text when `text-align: justify` is set."
 spec: https://drafts.csswg.org/css-text-4/#text-justify-property
 group: text
+caniuse: css-text-justify
 compat_features:
   - css.properties.text-justify
   - css.properties.text-justify.auto
