--- a/features/dom.yml
+++ b/features/dom.yml
@@ -92,6 +92,7 @@ compat_features:
   - api.Document.createTreeWalker.whatToShow_filter_parameters_optional
   - api.Document.currentScript
   - api.Document.defaultView
+  - api.Document.designMode
   - api.Document.dir
   - api.Document.doctype
   - api.Document.documentElement
@@ -123,6 +124,7 @@ compat_features:
   - api.Document.replaceChildren
   - api.Document.scripts
   - api.Document.title
+  - api.Document.writeln
   - api.DocumentFragment
   - api.DocumentFragment.DocumentFragment
   - api.DocumentFragment.append
