--- a/features/form.yml
+++ b/features/form.yml
@@ -40,3 +40,6 @@ compat_features:
   - html.elements.form.novalidate
   - html.elements.form.rel
   - html.elements.form.target
+  - api.SubmitEvent
+  - api.SubmitEvent.SubmitEvent
+  - api.SubmitEvent.submitter
