--- a/features/view-transitions.yml
+++ b/features/view-transitions.yml
@@ -3,8 +3,17 @@ description: View transitions allow you to create animated visual transitions be
 spec: https://drafts.csswg.org/css-view-transitions-1/
 caniuse: view-transitions
 group: view-transitions
+status:
+  compute_from: api.ViewTransition
 compat_features:
   - api.Document.startViewTransition
+  - api.PageRevealEvent
+  - api.PageRevealEvent.PageRevealEvent
+  - api.PageRevealEvent.viewTransition
+  - api.PageSwapEvent
+  - api.PageSwapEvent.PageSwapEvent
+  - api.PageSwapEvent.activation
+  - api.PageSwapEvent.viewTransition
   - api.ViewTransition
   - api.ViewTransition.finished
   - api.ViewTransition.ready
