--- a/features/view-transitions.yml.dist
+++ b/features/view-transitions.yml.dist
@@ -4,11 +4,11 @@
 status:
   baseline: false
   support:
-    chrome: "124"
-    chrome_android: "124"
-    edge: "124"
-    safari: "18.2"
-    safari_ios: "18.2"
+    chrome: "111"
+    chrome_android: "111"
+    edge: "111"
+    safari: "18"
+    safari_ios: "18"
 compat_features:
   # baseline: false
   # support:
@@ -23,6 +23,7 @@ compat_features:
   - css.selectors.view-transition-new
   - css.selectors.view-transition-old
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "111"
@@ -46,9 +47,9 @@ compat_features:
   #   edge: "123"
   #   safari: "18.2"
   #   safari_ios: "18.2"
+  - api.PageRevealEvent
   - api.Window.pagereveal_event
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "124"
@@ -56,4 +57,26 @@ compat_features:
   #   edge: "124"
   #   safari: "18.2"
   #   safari_ios: "18.2"
+  - api.PageSwapEvent
+  - api.PageSwapEvent.activation
   - api.Window.pageswap_event
+
+  # baseline: false
+  # support:
+  #   chrome: "126"
+  #   chrome_android: "126"
+  #   edge: "126"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
+  - api.PageRevealEvent.viewTransition
+  - api.PageSwapEvent.viewTransition
+
+  # baseline: false
+  # support:
+  #   chrome: "128"
+  #   chrome_android: "128"
+  #   edge: "128"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
+  - api.PageRevealEvent.PageRevealEvent
+  - api.PageSwapEvent.PageSwapEvent
