Replace renamed BCD key

--- a/features/hidden-until-found.yml
+++ b/features/hidden-until-found.yml
@@ -4,4 +4,4 @@ spec: https://html.spec.whatwg.org/multipage/interaction.html#attr-hidden-until-
 group: html
 compat_features:
   - api.Element.beforematch_event
-  - html.global_attributes.hidden.until-found_value
+  - html.global_attributes.hidden.until-found
