--- a/features/hidden-until-found.yml.dist
+++ b/features/hidden-until-found.yml.dist
@@ -9,4 +9,4 @@ status:
     edge: "102"
 compat_features:
   - api.Element.beforematch_event
-  - html.global_attributes.hidden.until-found_value
+  - html.global_attributes.hidden.until-found
