Add more caniuse

--- a/features/display.yml
+++ b/features/display.yml
@@ -2,6 +2,7 @@ name: Display
 description: The `display` CSS property sets the display behavior of an element's box within its layout and sets the layout behavior for its child elements.
 spec: https://drafts.csswg.org/css-display-3/#the-display-properties
 group: css
+caniuse: inline-block
 status:
   compute_from: css.properties.display
 compat_features:
