--- a/features/events.yml
+++ b/features/events.yml
@@ -4,6 +4,7 @@ spec:
   - https://html.spec.whatwg.org/multipage/indices.html#events-2
   - https://dom.spec.whatwg.org/#interface-customevent
   - https://dom.spec.whatwg.org/#interface-eventtarget
+caniuse: addeventlistener
 status:
   compute_from: api.EventTarget.addEventListener
 compat_features:
