--- a/features/background.yml
+++ b/features/background.yml
@@ -2,6 +2,7 @@ name: background
 description: The `background` CSS property is a shorthand that sets several background properties at once.
 spec: https://drafts.csswg.org/css-backgrounds-3/#background
 group: background
+caniuse: multibackgrounds
 compat_features:
   - css.properties.background
   - css.properties.background.multiple_backgrounds
