Use svg 1.1 spec link

--- a/features/svg-deprecated.yml
+++ b/features/svg-deprecated.yml
@@ -1,6 +1,6 @@
 name: SVG (deprecated)
 description: SVG 2 deprecated or removed a significant number of features defined in SVG 1.1, including features related to fonts, alternate glyphs, the `xlink` namespace, and the `<cursor>` and `<tref>` elements.
-spec: https://svgwg.org/svg2-draft/
+spec: https://www.w3.org/TR/SVG11/
 discouraged:
   according_to:
     - https://svgwg.org/svg2-draft/changes.html#substantial
