Add additional alternatives

--- a/features/svg-deprecated.yml
+++ b/features/svg-deprecated.yml
@@ -6,6 +6,8 @@ discouraged:
     - https://svgwg.org/svg2-draft/changes.html#substantial
   alternatives:
     - svg
+    - cursor
+    - font-face
 compat_features:
   - api.SVGAElement.ping
   - api.SVGAElement.text
