--- a/features/overflow-overlay.yml
+++ b/features/overflow-overlay.yml
@@ -1,11 +1,11 @@
 name: "`overflow: overlay`"
 description: "The `overflow: overlay` CSS declaration sets the behavior for when content doesn't fit in an element. It is superceded by `overflow: auto`."
-spec: https://drafts.csswg.org/css-overflow/#propdef-overflow
+spec: https://drafts.csswg.org/css-overflow-3/#propdef-overflow
 group: css
 caniuse: css-overflow-overlay
 discouraged:
   according_to:
-    - https://drafts.csswg.org/css-overflow/#valdef-overflow-overlay
+    - https://drafts.csswg.org/css-overflow-3/#valdef-overflow-overlay
   alternatives:
     - overflow-shorthand
 compat_features:
