--- a/features/text-decoration-line-blink.yml
+++ b/features/text-decoration-line-blink.yml
@@ -1,12 +1,12 @@
 name: "`text-decoration-line: blink`"
 description: TODO
-spec: https://drafts.csswg.org/css-text-decor/#valdef-text-decoration-line-blink
+spec: https://drafts.csswg.org/css-text-decor-3/#valdef-text-decoration-line-blink
 group:
   - animation
   - css
 discouraged:
   according_to:
-    - https://drafts.csswg.org/css-text-decor/#valdef-text-decoration-line-blink
+    - https://drafts.csswg.org/css-text-decor-3/#valdef-text-decoration-line-blink
   alternatives:
     - animations-css
 compat_features:
