--- a/features/word-break-break-word.yml
+++ b/features/word-break-break-word.yml
@@ -1,6 +1,6 @@
 name: "`word-break: break-word`"
 description: "The `word-break: break-word` CSS declaration sets word breaks to occur according to their customary rules. It is superceded by `overflow-wrap: anywhere`"
-spec: https://drafts.csswg.org/css-text/#word-break-property
+spec: https://drafts.csswg.org/css-text-3/#word-break-property
 group: css
 discouraged:
   according_to:
