Clip spec, re-run dist

--- a/features/clip.yml
+++ b/features/clip.yml
@@ -1,10 +1,10 @@
 name: clip
 description: The `clip` CSS property sets the visible area of an absolutely positioned element.
-spec: https://drafts.fxtf.org/css-masking/#clip-property
+spec: https://drafts.fxtf.org/css-masking-1/#clip-property
 group: clipping-shapes-masking
 discouraged:
   according_to:
-    - https://drafts.fxtf.org/css-masking/#clip-property
+    - https://drafts.fxtf.org/css-masking-1/#clip-property
   alternatives:
     - clip-path
 compat_features:
