--- a/features/clip.yml.dist
+++ b/features/clip.yml.dist
@@ -5,10 +5,10 @@ status:
   baseline: false
   support:
     chrome: ≤80
-    chrome_android: "80"
-    edge: "80"
+    chrome_android: ≤80
+    edge: ≤80
     firefox: ≤72
-    firefox_android: "79"
+    firefox_android: ≤79
     safari: ≤13.1
     safari_ios: ≤13.4
 compat_features:
@@ -39,10 +39,10 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: ≤80
-  #   chrome_android: "80"
-  #   edge: "80"
+  #   chrome_android: ≤80
+  #   edge: ≤80
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.clip.auto
