--- a/features/color-adjust.yml.dist
+++ b/features/color-adjust.yml.dist
@@ -5,7 +5,7 @@ status:
   baseline: false
   support:
     firefox: ≤72
-    firefox_android: "79"
+    firefox_android: ≤79
     safari: "15.4"
     safari_ios: "15.4"
 compat_features:
