Improve GitHub stats

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-features/*.yml.dist linguist-language=YAML
+features/*.yml linguist-detectable
+features/*.yml.dist linguist-language=YAML linguist-generated
