Move ReadableStream.values from streams to async-iterable-streams

--- a/features/async-iterable-streams.yml
+++ b/features/async-iterable-streams.yml
@@ -4,3 +4,4 @@ spec: https://streams.spec.whatwg.org/#rs-asynciterator
 group: streams
 compat_features:
   - api.ReadableStream.@@asyncIterator
+  - api.ReadableStream.values
