Update description per suggestion
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/text-decoration-line-blink.yml
+++ b/features/text-decoration-line-blink.yml
@@ -1,5 +1,5 @@
 name: "`text-decoration-line: blink`"
-description: TODO
+description: "The deprecated `text-decoration: blink` CSS declaration used to make text alternate between being visible and invisible."
 spec: https://drafts.csswg.org/css-text-decor-3/#valdef-text-decoration-line-blink
 group:
   - animation
