--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 features/*.yml linguist-detectable
-features/*.yml.dist linguist-language=YAML linguist-generated
+features/*.yml.dist linguist-language=YAML
