Update feature descriptions
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/transferable-streams.yml
+++ b/features/transferable-streams.yml
@@ -1,5 +1,5 @@
 name: Transferable streams
-description: Streams are transferable objects, allowing you to move them from one context to another (for example, to a worker).
+description: Streams are transferable objects, which can be moved between contexts such as workers.
 spec: https://streams.spec.whatwg.org/#rs-transfer
 group: streams
 compat_features:
