--- a/features/readablestream-from.yml
+++ b/features/readablestream-from.yml
@@ -1,5 +1,5 @@
 name: ReadableStream.from()
-description: The `ReadableStream.from()` static method allows you to wrap iterable and async iterable objects (for example, arrays or async generators) as a readable stream.
+description: The `ReadableStream.from()` static method wraps iterable and async iterable objects, such as arrays or async generator functions, as a readable stream.
 spec: https://streams.spec.whatwg.org/#rs-from
 group: streams
 compat_features:
