--- a/features/readablestreambyobreader-read-min.yml
+++ b/features/readablestreambyobreader-read-min.yml
@@ -1,5 +1,5 @@
 name: "ReadableStreamBYOBReader.read(): min option"
-description: The `min` option for `ReadableStreamBYOBReader.read(view, options)` allows you to specify the minimum number of elements that must be available before the read request will fulfill.
+description: The `min` option for `ReadableStreamBYOBReader.read(view, options)` sets the minimum number of elements that must be available before the read request will fulfill.
 spec: https://streams.spec.whatwg.org/#ref-for-dom-readablestreambyobreaderreadoptions-min%E2%91%A0
 group: streams
 compat_features:
