--- a/features/private-click-measurement.yml
+++ b/features/private-click-measurement.yml
@@ -1,5 +1,5 @@
 name: Private click measurement
-description: Private Click Measurement, or PCM, is an API for measuring ad clicks across websites.
+description: The `attributionsourceid` and `attributiondestination` attributes for `<a>` elements measure clicks across websites without associating a click to a specific session. Not to be confused with attribution reporting. Also known as PCM.
 spec: https://privacycg.github.io/private-click-measurement/
 compat_features:
   - api.HTMLAnchorElement.attributionSourceId
