Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/writing-mode-deprecated.yml
+++ b/features/writing-mode-deprecated.yml
@@ -1,5 +1,5 @@
-name: Writing mode (deprecated)
-description: The `lr`, `lr-tb`, `rl`, `rl-tb`, `tb`, and `tb-rl` keyword values represent writing modes for elements in SVG 1.1 documents.
+name: writing-mode SVG 1.1 values
+description: The `lr`, `lr-tb`, `rl`, `rl-tb`, `tb`, and `tb-rl` keyword values for the `writing-mode` CSS property set the text direction for elements in SVG 1.1 documents.
 spec: https://drafts.csswg.org/css-writing-modes-4/#block-flow
 group: css
 discouraged:
