--- a/features/media-queries-deprecated.yml
+++ b/features/media-queries-deprecated.yml
@@ -1,4 +1,4 @@
-name: Media queries (deprecated)
+name: Device media queries
 description: The `device-aspect-ratio`, `device-height`, and `device-width` media features describe physical properties of the displaying output device.
 spec: https://drafts.csswg.org/mediaqueries-5/#mf-deprecated
 group: media-queries
