--- a/features/document-colors.yml
+++ b/features/document-colors.yml
@@ -7,6 +7,8 @@ discouraged:
   alternatives:
     - background-color
     - color
+    - css-object-model
+    - get-computed-style
 compat_features:
   - api.Document.bgColor
   - api.Document.fgColor
