--- a/features/gethtml.yml
+++ b/features/gethtml.yml
@@ -1,4 +1,4 @@
-name: getHTML
+name: getHTML()
 description: The `getHTML()` method of `Element` and `ShadowRoot` objects serializes an element's DOM to an HTML string.
 spec: https://html.spec.whatwg.org/multipage/dynamic-markup-insertion.html#html-serialization-methods
 compat_features:
